--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -13,6 +13,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "strictNullChecks": false,
+    "noImplicitAny": false,
 
     /* Linting */
     "strict": true,
