--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "axios": "^1.6.2",
+    "js-cookie": "^3.0.5",
+    "mobx": "^6.11.0",
+    "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
