--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.2",
     "js-cookie": "^3.0.5",
     "mobx": "^6.11.0",
