added  google oauth cofigs

--- a/back-end/.env
+++ b/back-end/.env
@@ -8,3 +8,6 @@ JWT_REFRESH_SECRET=vasd98qwsqw
 JWT_ACCESS_EXPIRATION=1800
 JWT_REFRESH_EXPIRATION=86400
 PORT=3000
+
+GOOGLE_CLIENT_ID=clientId
+GOOGLE_CLIENT_SECRET=clientSecret
